[metadata]
name = rest_tools
version = 0.7.1
author = Francesco Pongiluppi
author_email = pongi@pongi.it
description = A collection of utilities to speak with JSON REST APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/willywongi/py-rest-tools
project_urls =
    Bug Tracker = https://github.com/willywongi/py-rest-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
